--- a/playground/promise/promise-chain.html
+++ b/playground/promise/promise-chain.html
@@ -47,6 +47,29 @@
     })
     const go = document.querySelector('.go');
 
+    async function animate2(e) { // no callbacks or returns needed, await is added to stop the function from running each time. 
+      const el = e.currentTarget;
+      el.textContent = 'GO!'
+      // 2. make it a circle after 2 seconds.
+      await wait(200)
+      el.classList.add('circle');
+      await wait(500);
+      // 3. make purple after 0.5s
+      el.classList.add('purple');
+      await wait(250);
+      // 4. make it square 0.25s
+      el.classList.remove('circle');
+      await wait(300);
+      // 5. make it green after 0.3s
+      el.classList.add('green');
+      await wait(500);
+      // 6. fade out after 0.5s
+      el.classList.add('fadeOut');
+    }
+    
+
+    go.addEventListener('click', animate);
+
     function animate(e) {
       const el = e.currentTarget;
       el.textContent = 'GO!'
@@ -77,7 +100,7 @@
       })
     }
 
-    go.addEventListener('click', animate);
+    go.addEventListener('click', animate2);
 
 
     
