--- a/playground/async-await/async-await.html
+++ b/playground/async-await/async-await.html
@@ -57,31 +57,31 @@
 
     makeDinner();
 
-    // function declarations
-    async function fd() {}
+  //   // function declarations
+  //   async function fd() {}
 
-    // arrow function
-    const arrowfn= async () => {}
+  //   // arrow function
+  //   const arrowfn= async () => {}
 
-    // callback functions
-    window.addEventListener('click', async function () {
+  //   // callback functions
+  //   window.addEventListener('click', async function () {
 
-    })
+  //   })
 
-    // methods
-    const person = {
-      sayHi: async function() {
+  //   // methods
+  //   const person = {
+  //     sayHi: async function() {
 
-      },
-      // method shorthand
-      async sayHello() {
+  //     },
+  //     // method shorthand
+  //     async sayHello() {
 
-      },
-    // function property
-    sayHey: async () => {
+  //     },
+  //   // function property
+  //   sayHey: async () => {
       
-    },
-  }
+  //   },
+  // }
     
 
   </script>
