fix(simplify): simplifed wait code to one line.

--- a/playground/async-await/async-await-error-handling.html
+++ b/playground/async-await/async-await-error-handling.html
@@ -10,11 +10,7 @@
 
 <body>
   <script>
-    function wait(ms = 0) {
-      return new Promise((resolve) => {
-        setTimeout(resolve, ms);
-      })
-    }
+    const wait = (ms = 0) => new Promise(resolve => setTimeout(resolve, ms));
 
     function makePizza(toppings = []) {
       return new Promise(function (resolve, reject) {
