--- a/exercises/75 - CORS and Recipes/index.html
+++ b/exercises/75 - CORS and Recipes/index.html
@@ -11,14 +11,32 @@
       display: grid;
       grid-template-columns: 1fr;
     }
+
+    button[disabled] {
+      opacity: 0.2;
+    }
+
+    .recipes {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax
+      (200, 1fr));
+      grid-gap: 20px;
+    }
+
+    .recipe {
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      padding: 20px;
+    }
   </style>
 </head>
 
 <body>
   <div class="wrapper">
     <form class="search" autocomplete="off">
+      <!-- <fieldset disabled> -->
       <input type="text" name="query" value="pizza">
-      <button name="submit" type="submit">Submit</button>
+      <button type="submit" name="submit" >Submit</button>
+      <!-- </fieldset> -->
     </form>
     <div class="recipes"></div>
   </div>
