--- a/exercises/75 - CORS and Recipes/index.html
+++ b/exercises/75 - CORS and Recipes/index.html
@@ -18,8 +18,7 @@
 
     .recipes {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax
-      (200, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       grid-gap: 20px;
     }
 
